--- a/client/src/components/Footer/style.css
+++ b/client/src/components/Footer/style.css
@@ -1,7 +1,7 @@
 footer {
     width: 100%;
     height: 50px;
-    background-color: blue;
+    background-color: rgb(71, 117, 139);
     font-family: 'Baloo Thambi', cursive;
     text-align: center;
     color: white;
